--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,3 +1,11 @@
+
+/** general page styling **/
+
+.top-buffer { margin-top:20px; }
+
+/** end general page styling **/
+
+
 /***************************** Required styles *****************************/
 
 /**
@@ -121,9 +129,18 @@
     height: 80px;
 }
 
+.teamsAccounts .dropzone .item .nameBox {
+    background-color:#ccc;  
+    width:100px; 
+    height: 50px; 
+    text-align:center;
+}
+
+
 .teamsAccounts .dropzone .container-element {
     margin: 10px;
 }
+
 
 .teamsAccounts .dropzone .container-element .column {
     float: left;
