--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,14 @@
 <html ng-app="myApp">
 <head>
   <title>FlapperNews</title>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-route.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular-resource.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.0/angular-material.js"></script>
+    
+  <script src="/vendor/node_modules/angular-smart-table/dist/smart-table.js"></script> 
   <script src="/vendor/xeditable/js/xeditable.js"></script> 
   <script src="/vendor/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script> 
   <script src="/vendor/angular_linq/angular_linq.js"></script>
@@ -16,6 +19,8 @@
 
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="/vendor/xeditable/css/xeditable.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.0/angular-material.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.0/angular-material.layouts.css" rel="stylesheet">
 
   <%= csrf_meta_tags %>
 </head>
