--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -87,10 +87,9 @@
       </script>
       <!-- end scripts -->
 
-
 <hr>
 
-      <div class="row" id="tabs_layout">
+      <div class="row" id="tabs_layout" style="margin-left: 0px">
 
         <ul class="nav nav-pills">
             <li ng-class="{ active: isSet(1) }">
@@ -147,15 +146,16 @@
             Select Country
             </div>
 
-            <div class="row" style="margin-left: 20px; margin-top: 10px">
-              <select ng-model="selected_country" ng-options="c.country for c in countries">
+            <div class="row" style="margin-left: 25px; margin-top: 10px">
+              <select ng-model="selectedCountryID">
+                <option ng-repeat="c in countries" value="{{c.id}}"> {{c.country}}</option>
               </select>
             </div>
 
           </div>
           
           <div class="col-md-3">
-            <div class="row">
+            <div class="row" style="margin-left: 1px">
             Select Holiday
             </div>
 
@@ -170,60 +170,54 @@
             </div>
 
             <div class="row" style=" margin-top: 10px">
-              <input ng-model="descrip" class="img-rounded" type="text"> </input>
+              <input ng-model="descrip" class="img-rounded" type="text" > </input>
             </div>
           </div>
 
           <div class="col-md-3">
             <div class="row" style="margin-left: 10px;">
-            <button type="button" class="btn btn-primary" ng-click="add_holiday(selected_country.id, holidate, descrip);" style="height:50px;"> Save Holiday </button> 
+            <button type="button" class="btn btn-primary" ng-click="add_holiday(selectedCountryID, holidate, descrip);" style="height:50px;"> Save Holiday </button> 
             </div>
           </div>
 
           <div class="row">
             <div class="row top-buffer" >
 
-            </div>
+            </div>                  
             <div class="row top-buffer" style="margin-left: 30px;">
-
               <div class="col-md-6">
-                <table st-table="rowCollection" class="table table-striped">
+                <table class="table table-striped">
                   <thead>
                   <tr>
-                    <th st-sort="holiday_date">Date</th>
+                    <th>
+                      <a href="#" ng-click= "sortReverse = !sortReverse">
+                      Date   
+                      </a>
+                    </th>
                     <th>Description</th>
                     <th></th>
                   </tr>
                   </thead>
                   <tbody>
-                  <tr ng-repeat="row in holidays">
+                  <tr ng-repeat="row in holidays | orderBy:sortType:sortReverse | include_v: selectedCountryID  ">
                     <td>{{row.holiday_date}}</td>
                     <td>{{row.description}}</td>
-                    <td>
+                    <td> 
                       <button type="button" class="btn mini red-stripe" ng-click="remove_holiday(row.id);">
-                      Delete
-
-                      </button>
-
-                    </td>
-
+                      Delete 
+                      </button> 
+                    </td> 
                   </tr>
                   </tbody>
                 </table> 
               </div>
-
             </div>
           </div>
 
-<!-- test here -->
 
-          <br><br><br><br><br><br>          
+          <br><br><br><br><br><br> 
         </div>
-
       </div>
-
-
-
    </div> 
 
 <!-- end container -->
@@ -247,6 +241,3 @@ dnd-moved="models.dropzones._Accounts.splice($index, 1)"
    </ul>
 -->
 </div>
-
-
-
