--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
   <script src="/vendor/node_modules/angular-smart-table/dist/smart-table.js"></script> 
   <script src="/vendor/xeditable/js/xeditable.js"></script> 
   <script src="/vendor/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script> 
+  <script src="/vendor/ngDraggable/ngDraggable.js"></script>
   <script src="/vendor/angular_linq/angular_linq.js"></script>
 
   <%= stylesheet_link_tag 'application', media: 'all'  %>
