--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,19 +8,18 @@
          <div class='col-md-6' style="min-height: 250px;"> 
           <h4> Section 1</h4>
            <br>
-           {{lo_test}}
+           {{models.dropzones.Teams}}
 
          </div>   <!-- end teams col -->
 
          <div class='col-md-6'>
              <h4> section 2 </h4>
              <br>
-
          </div>
-
 
          <!-- end teams col -->
       </div>
+
       <!-- end row -->
 
       <!-- begin scripts -->
@@ -36,7 +35,6 @@
          </li>
       </ul>
       </script>
-
 
       <script type="text/ng-template" id="team.html">
          <div class= "container-element box box-blue">
@@ -73,6 +71,32 @@
 
        </div> 
       </script>
+
+
+      <script type="text/ng-template" id="accountV2.html"> 
+      <div class="item"> 
+
+         <div class="col-md-3">
+            <div class="nameBox">
+                {{obj.name}}  
+            </div>
+         </div>
+
+         <div class="col-md-3"> 
+         Last Quarter TPV: {{obj.TPV}}  
+         </div>
+
+         <div class="col-md-3"> 
+         Expected Growth:  <br>  <input ng-model="obj.growth" type="text"  style="width: 40%; text-algin:center;"/>
+         </div>
+
+         <div class="col-md-3"> 
+         Expected Demand: {{ obj.expected_tpv * angular_growth(obj.growth) | number: 0}}
+         </div>
+
+       </div> 
+      </script>
+
       <!-- end scripts -->
 
 <hr>
@@ -112,17 +136,64 @@
           </div>
 
 
+<!--           
           <div class="teamsAccounts">
              <div class="row">
                 <div ng-repeat="(zone, list) in models.dropzones" class="col-md-6">
                    <div class="dropzone box box-yellow">
                       <h3> {{zone}}</h3>
                       <div ng-include="'display.html'"> </div>
-                   </div>
+s                   </div>
                 </div>
              </div>
-          </div>
+          </div> 
+-->
+             <hr>
 
+             <div class="row" id="new dragNDrop">
+
+                 <div class="col-md-6">
+
+                    <ul>
+                      <li ng-repeat="team in models.dropzones.Teams">
+
+                      <!-- {{team.team}} -->
+
+                        <div ng-drop="true" ng-drop-success="onDropComplete2($index, $data, $event)">
+                        <span class="title">{{team.team}}</span>  accounts + {{$index}}
+
+                            <div ng-repeat="obj in team.columns[0]" ng-drag="true" ng-drag-data="obj" ng-drag-success="onDragSuccess2($parent.$index, $data,$event)" ng-center-anchor="{{centerAnchor}}">
+ 
+                                <!-- {{act.name}}  -->
+                              <div class="row" ng-include="'accountV2.html'">
+                              </div>
+
+ 
+                            </div>
+
+                        </div>
+
+                      </li >
+                    </ul>
+
+                 </div>
+
+                 <div class="col-md-6">
+                    <div ng-drop="true" ng-drop-success="onDropComplete1($data,$event)">
+                        <span class="title">Drop area #1</span>
+
+                        <div ng-repeat="obj in droppedObjects1" ng-drag="true" ng-drag-data="obj" ng-drag-success="onDragSuccess1($data,$event)" ng-center-anchor="{{centerAnchor}}" >
+                            <!-- {{obj.name}} -->
+                            <div class="row" ng-include="'accountV2.html'">
+                            </div>
+
+                        </div>
+
+                    </div>
+                 </div>
+
+             </div>
+ 
         </div>
 
         <div id="businessdays" ng-show="isSet(2)">
@@ -190,10 +261,10 @@
                   <tr ng-repeat="row in holidays | orderBy:sortType:sortReverse | include_v: selectedCountryID  ">
                     <td>{{row.holiday_date}}</td>
                     <td>{{row.description}}</td>
-                    <td> 
+                    <td>
                       <button type="button" class="btn mini red-stripe" ng-click="remove_holiday(row.id);">
-                      Delete 
-                      </button> 
+                      Delete
+                      </button>
                     </td> 
                   </tr>
                   </tbody>
